--- a/starter/style.css
+++ b/starter/style.css
@@ -11,6 +11,7 @@
   --color-tertiary-opacity: #ff58602d;
   --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
   --gradient-secondary: linear-gradient(to top left, #f3f3f3, #dddddd);
+  --gradient-tertiary: linear-gradient(to top left, #f3f3f3, yellow);
 }
 
 * {
@@ -34,7 +35,7 @@ body {
 }
 
 .section {
-  padding: 15rem 3rem;
+  padding: 15% 3% 15% 3%;
   border-top: 1px solid #ddd;
 
   transition: transform 1s, opacity 1s;
@@ -205,6 +206,93 @@ h4 {
 .highlight {
   position: relative;
 }
-.polish{
+.hidden {
+  display: none;
+}
+.pick{
+  font-size: 41px;
+  font-weight: lighter;
+}
+.AIdescription{
+  font-size: 30px;
+  font-weight: lighter;
+  padding-bottom: 20px;
+}
+.section__title{
+  font-size: 41px;
+  font-weight: lighter;
+  padding-bottom: 20px;
+}
+
+.writingTips{
+  font-size: 21px;
+  font-weight: lighter;
+  width: 80%;
+}
+
+
+.thumbnail{
+  width: 103%;
+  display: block;
+}
+
+.videoTitle{
+  width: 200px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 500;
+  margin-bottom: 12px;
 
 }
+.videoAuthor{
+  color: rgb(96, 96, 96);
+  font-size: 13px;
+  margin-bottom: 6px;
+}
+.videoStats{
+  color: rgb(96, 96, 96);
+  font-size: 13px;
+
+}
+
+.profilePicture{
+  width: 80%;
+  border-radius: 50px;
+}
+.videoTitle{
+  margin-top: 0;
+}
+.thumbnailRow{
+  margin-bottom: 12px;
+  position: relative;
+}
+.videoInformationGrid{
+  display:grid;
+  grid-template-columns: 50px 1fr;
+}
+.mainGrid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 16px;
+  row-gap: 40px;
+  padding: 5% 25px 10% 25px;
+
+}
+
+.videoTiming{
+  background-color: black;
+  position: absolute;
+  bottom: 8px;
+  right: 4px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 4px 4px 4px 4px;
+  border-radius: 2px;
+}
+
+.yellowHighlight{
+  background-image: var(--gradient-tertiary);
+
+}
+
